Merge origin/master: resolve conflicts keeping CVL masivo in Gen, take master DAO improvements
Agent-Logs-Url: https://github.com/GerardoPerezArenas/holalal/sessions/c2e96e07-5d5f-4bfc-94e2-3ae9dd53af47

Co-authored-by: GerardoPerezArenas <73581201+GerardoPerezArenas@users.noreply.github.com>