@@ -20,7 +20,7 @@ public class InteropCvlMasivoNifDAO {
 
     private static final Logger log = LogManager.getLogger(InteropCvlMasivoNifDAO.class);
 
-    private static InteropCvlMasivoNifDAO instance = null;
+    private static volatile InteropCvlMasivoNifDAO instance = null;
 
     private InteropCvlMasivoNifDAO() {
     }
@@ -50,8 +50,10 @@ public class InteropCvlMasivoNifDAO {
         PreparedStatement st = null;
         try {
             final int id = getNextId(con);
-            final String sql = "INSERT INTO "
-                    + ConfigurationParameter.getParameter(ConstantesMeLanbideInterop.TABLA_INTEROP_CVL_MASIVO_NIF, ConstantesMeLanbideInterop.FICHERO_PROPIEDADES)
+            final String tabla = ConfigurationParameter.getParameter(
+                    ConstantesMeLanbideInterop.TABLA_INTEROP_CVL_MASIVO_NIF,
+                    ConstantesMeLanbideInterop.FICHERO_PROPIEDADES);
+            final String sql = "INSERT INTO " + tabla
                     + " (ID, FECHA_EJECUCION, NIF, TIPO_DOC, COD_RESPUESTA, DESC_RESPUESTA, PAYLOAD_RESUMEN, USUARIO)"
                     + " VALUES (?, ?, ?, ?, ?, ?, ?, ?)";
 
@@ -80,9 +82,11 @@ public class InteropCvlMasivoNifDAO {
      * Consulta para auditoria/reimpresion por id.
      */
     public List<InteropCvlMasivoNifVO> getRegistrosById(final Long id, final Connection con) throws Exception {
+        final String tabla = ConfigurationParameter.getParameter(
+                ConstantesMeLanbideInterop.TABLA_INTEROP_CVL_MASIVO_NIF,
+                ConstantesMeLanbideInterop.FICHERO_PROPIEDADES);
         final String sql = "SELECT ID, FECHA_EJECUCION, NIF, TIPO_DOC, COD_RESPUESTA, DESC_RESPUESTA, PAYLOAD_RESUMEN, USUARIO"
-                + " FROM " + ConfigurationParameter.getParameter(ConstantesMeLanbideInterop.TABLA_INTEROP_CVL_MASIVO_NIF, ConstantesMeLanbideInterop.FICHERO_PROPIEDADES)
-                + " WHERE ID = ?";
+                + " FROM " + tabla + " WHERE ID = ?";
         return ejecutarConsulta(sql, id, null, con);
     }
 
@@ -91,9 +95,11 @@ public class InteropCvlMasivoNifDAO {
      */
     public List<InteropCvlMasivoNifVO> getRegistrosByFechaEjecucion(final Timestamp fechaDesde,
             final Timestamp fechaHasta, final Connection con) throws Exception {
+        final String tabla = ConfigurationParameter.getParameter(
+                ConstantesMeLanbideInterop.TABLA_INTEROP_CVL_MASIVO_NIF,
+                ConstantesMeLanbideInterop.FICHERO_PROPIEDADES);
         final String sql = "SELECT ID, FECHA_EJECUCION, NIF, TIPO_DOC, COD_RESPUESTA, DESC_RESPUESTA, PAYLOAD_RESUMEN, USUARIO"
-                + " FROM " + ConfigurationParameter.getParameter(ConstantesMeLanbideInterop.TABLA_INTEROP_CVL_MASIVO_NIF, ConstantesMeLanbideInterop.FICHERO_PROPIEDADES)
-                + " WHERE FECHA_EJECUCION BETWEEN ? AND ? ORDER BY FECHA_EJECUCION DESC, ID DESC";
+                + " FROM " + tabla + " WHERE FECHA_EJECUCION BETWEEN ? AND ? ORDER BY FECHA_EJECUCION DESC, ID DESC";
         return ejecutarConsulta(sql, null, new Timestamp[]{fechaDesde, fechaHasta}, con);
     }
 
@@ -116,7 +122,7 @@ public class InteropCvlMasivoNifDAO {
             rs = st.executeQuery();
             while (rs.next()) {
                 result.add(new InteropCvlMasivoNifVO(
-                        new Long(rs.getLong("ID")),
+                        Long.valueOf(rs.getLong("ID")),
                         rs.getTimestamp("FECHA_EJECUCION"),
                         rs.getString("NIF"),
                         rs.getString("TIPO_DOC"),
@@ -141,6 +147,9 @@ public class InteropCvlMasivoNifDAO {
     }
 
     private int getNextId(final Connection con) throws Exception {
+        final String secuencia = ConfigurationParameter.getParameter(
+                ConstantesMeLanbideInterop.SEQ_INTEROP_CVL_MASIVO_NIF,
+                ConstantesMeLanbideInterop.FICHERO_PROPIEDADES);
         Statement st = null;
         ResultSet rs = null;
         final String seqName = ConfigurationParameter.getParameter(
@@ -148,13 +157,13 @@ public class InteropCvlMasivoNifDAO {
                 ConstantesMeLanbideInterop.FICHERO_PROPIEDADES);
         try {
             st = con.createStatement();
-            rs = st.executeQuery("SELECT " + seqName + ".NEXTVAL FROM DUAL");
+            rs = st.executeQuery("SELECT " + secuencia + ".NEXTVAL FROM DUAL");
             if (rs.next()) {
                 return rs.getInt(1);
             }
-            throw new Exception("No se pudo obtener identificador de secuencia " + seqName);
+            throw new Exception("No se pudo obtener identificador de secuencia " + secuencia);
         } catch (Exception ex) {
-            log.error("Error generando secuencia " + seqName, ex);
+            log.error("Error generando secuencia " + secuencia, ex);
             throw new Exception(ex);
         } finally {
             if (rs != null) {
